# google-generative-ai-rs

./: .env  Cargo.toml  README.md
.github/workflows/: rust-check.yml
src/v1/: genai.rs  generative_models.rs  mod.rs
src/v1/constants/: request.rs
src/v1/methods/: generate_content.rs  mod.rs  request.rs
src/v1/models/: generative_models.rs  mod.rs
src/v1/traits/: mod.rs
src/v1/types/: content_types.rs  generation_types.rs  mod.rs  model.rs  request_types.rs  requests.rs  response_type.rs  responses.rs  safety_types.rs  schema.rs
src/v1/types/server/: caching.rs
